kanc_pamoi/src/tests/sample_code/should_fail/single_file/parse/empty_parens/empty_forall_params.k
type U {
    u: U,
}

let foo = forall() { U };
